--- a/Alafrancaise.html
+++ b/Alafrancaise.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="">
+    <link rel="stylesheet" type="text/css" href="unique.css">
     <script src="https://kit.fontawesome.com/e5dbd3d7b3.js" crossorigin="anonymous"></script>
 
     <title>À la française</title>
@@ -20,7 +20,7 @@
     <header>
         <a href="">
         <div class="logo">
-            <img src="ohmyfoodsvg.svg" alt="Logo de Ohmyfood">
+            <img class="svg-logo" src="ohmyfoodsvg.svg" alt="Logo de Ohmyfood">
         </div>
         </a>
         </header>
@@ -57,7 +57,7 @@
                 </div>
             </div>
 
-            <div class="food__card--2">
+            <div class="food__card">
                 <div class="food__details">
                     <h3>Velouté de légumes d'antan</h3>
                     <div class="food__more">
@@ -69,7 +69,7 @@
                 </div>
             </div>
 
-            <div class="food__card--3">
+            <div class="food__card">
                 <div class="food__details">
                     <h3>Soupe à l'oignon</h3>
                     <div class="food__more">
@@ -88,7 +88,7 @@
                 <h2>PLATS</h2>
             </div>
 
-            <div class="food__card--4">
+            <div class="food__card">
                 <div class="food__details">
                     <h3>Coquilles Saint-Jacques</h3>
                     <div class="food__more">
@@ -100,7 +100,7 @@
                 </div>
             </div>
 
-            <div class="food__card--5">
+            <div class="food__card">
                 <div class="food__details">
                     <h3>Magret de canard</h3>
                     <div class="food__more">
@@ -112,7 +112,7 @@
                 </div>
             </div>
 
-            <div class="food__card--6">
+            <div class="food__card">
                 <div class="food__details">
                     <h3>Pigeonneau d'Ille-et-Vilaine</h3>
                     <div class="food__more">
@@ -131,7 +131,7 @@
                 <h2>DESSERT</h2>
             </div>
 
-            <div class="food__card--7">
+            <div class="food__card">
                 <div class="food__details">
                     <h3>Pétales de violettes glacés</h3>
                     <div class="food__more">
@@ -143,7 +143,7 @@
                 </div>
             </div>
 
-            <div class="food__card--8">
+            <div class="food__card">
                 <div class="food__details">
                     <h3>Fondant au chocolat</h3>
                     <div class="food__more">
@@ -155,7 +155,7 @@
                 </div>
             </div>
 
-            <div class="food__card--9">
+            <div class="food__card">
                 <div class="food__details">
                     <h3>Millefeuille croustillant</h3>
                     <div class="food__more">
