--- a/Lanoteenchantee.html
+++ b/Lanoteenchantee.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="">
+    <link rel="stylesheet" type="text/css" href="unique.css">
     <script src="https://kit.fontawesome.com/e5dbd3d7b3.js" crossorigin="anonymous"></script>
 
     <title>La note enchantée</title>
@@ -20,7 +20,7 @@
     <header>
         <a href="">
         <div class="logo">
-            <img src="ohmyfoodsvg.svg" alt="Logo de Ohmyfood">
+            <img class="svg-logo" src="ohmyfoodsvg.svg" alt="Logo de Ohmyfood">
         </div>
         </a>
         </header>
@@ -31,7 +31,7 @@
         </div>
 
         <!--MAIN-->
-        <main class="menu">
+        <main class="menu--2">
 
             <div class="menu__title">
                 <h1>La note enchantée</h1>
@@ -57,7 +57,7 @@
                 </div>
             </div>
 
-            <div class="food__card--2">
+            <div class="food__card">
                 <div class="food__details">
                     <h3>Caviar osciètre</h3>
                     <div class="food__more">
@@ -69,7 +69,7 @@
                 </div>
             </div>
 
-            <div class="food__card--3">
+            <div class="food__card">
                 <div class="food__details">
                     <h3>Homard et espuma de potiron</h3>
                     <div class="food__more">
@@ -81,7 +81,7 @@
                 </div>
             </div>
 
-            <div class="food__card--4">
+            <div class="food__card">
                 <div class="food__details">
                     <h3>Foie gras de canard cuit entier</h3>
                     <div class="food__more">
@@ -101,7 +101,7 @@
                 <h2>PLATS</h2>
             </div>
 
-            <div class="food__card--4">
+            <div class="food__card">
                 <div class="food__details">
                     <h3>Noix de coquilles Saint-Jacques</h3>
                     <div class="food__more">
@@ -113,7 +113,7 @@
                 </div>
             </div>
 
-            <div class="food__card--5">
+            <div class="food__card">
                 <div class="food__details">
                     <h3>Langoustine poêlée</h3>
                     <div class="food__more">
@@ -125,7 +125,7 @@
                 </div>
             </div>
 
-            <div class="food__card--6">
+            <div class="food__card">
                 <div class="food__details">
                     <h3>Mijoté de queue de boeuf</h3>
                     <div class="food__more">
@@ -144,11 +144,11 @@
                 <h2>DESSERT</h2>
             </div>
 
-            <div class="food__card--7">
+            <div class="food__card">
                 <div class="food__details">
                     <h3>Macaron noisette et chocolat</h3>
                     <div class="food__more">
-                        <p>Glace au caramel brun et sel de Guérande</p>
+                        <p>Glace au caramel brun et sel de...</p>
                         <div class="food__price">
                             <p>18€</p>
                         </div>
@@ -156,7 +156,7 @@
                 </div>
             </div>
 
-            <div class="food__card--8">
+            <div class="food__card">
                 <div class="food__details">
                     <h3>Baba au rhum revisité</h3>
                     <div class="food__more">
@@ -168,7 +168,7 @@
                 </div>
             </div>
 
-            <div class="food__card--9">
+            <div class="food__card">
                 <div class="food__details">
                     <h3>Tarte au citron meringuée</h3>
                     <div class="food__more">
@@ -182,7 +182,7 @@
         </section>
 
         <!--BUTTON-->
-        <div class="btn">
+        <div class="btn--2">
             <button class="btn__order">Commander</button>
         </div>
             </main>
