--- a/Lapalettedugout.html
+++ b/Lapalettedugout.html
@@ -7,8 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="unique.css">
     <script src="https://kit.fontawesome.com/e5dbd3d7b3.js" crossorigin="anonymous"></script>
 
     <title>La palette du goût</title>
@@ -20,7 +22,7 @@
     <header>
         <a href="">
         <div class="logo">
-            <img src="ohmyfoodsvg.svg" alt="Logo de Ohmyfood">
+            <img class="svg-logo" src="ohmyfoodsvg.svg" alt="Logo de Ohmyfood">
         </div>
         </a>
         </header>
@@ -57,7 +59,7 @@
                 </div>
             </div>
 
-            <div class="food__card--2">
+            <div class="food__card">
                 <div class="food__details">
                     <h3>Foie gras de canard mi-cuit</h3>
                     <div class="food__more">
@@ -69,7 +71,7 @@
                 </div>
             </div>
 
-            <div class="food__card--3">
+            <div class="food__card">
                 <div class="food__details">
                     <h3>Oeuf au plat</h3>
                     <div class="food__more">
@@ -88,11 +90,11 @@
                 <h2>PLATS</h2>
             </div>
 
-            <div class="food__card--4">
+            <div class="food__card">
                 <div class="food__details">
                     <h3>Filet de boeuf aux herbes</h3>
                     <div class="food__more">
-                        <p>Accompagnées de sa ribambelle de légumes</p>
+                        <p>Accompagnées de sa ribambelle de...</p>
                         <div class="food__price">
                             <p>40€</p>
                         </div>
@@ -100,7 +102,7 @@
                 </div>
             </div>
 
-            <div class="food__card--5">
+            <div class="food__card">
                 <div class="food__details">
                     <h3>Parmentier de queue de boeuf</h3>
                     <div class="food__more">
@@ -112,7 +114,7 @@
                 </div>
             </div>
 
-            <div class="food__card--6">
+            <div class="food__card">
                 <div class="food__details">
                     <h3>Filet de Turbot</h3>
                     <div class="food__more">
@@ -131,7 +133,7 @@
                 <h2>DESSERT</h2>
             </div>
 
-            <div class="food__card--7">
+            <div class="food__card">
                 <div class="food__details">
                     <h3>Paris-Brest</h3>
                     <div class="food__more">
@@ -143,7 +145,7 @@
                 </div>
             </div>
 
-            <div class="food__card--8">
+            <div class="food__card">
                 <div class="food__details">
                     <h3>Macaron au chocolat d'exception</h3>
                     <div class="food__more">
@@ -155,7 +157,7 @@
                 </div>
             </div>
 
-            <div class="food__card--9">
+            <div class="food__card">
                 <div class="food__details">
                     <h3>Mousse au chocolat</h3>
                     <div class="food__more">
