--- a/Alafrancaise.html
+++ b/Alafrancaise.html
@@ -53,6 +53,9 @@
                         <div class="food__price">
                             <p>25€</p>
                         </div>
+                        <div class="food__effect">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -65,6 +68,9 @@
                         <div class="food__price">
                             <p>35€</p>
                         </div>
+                        <div class="food__effect">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -76,6 +82,9 @@
                         <p>Revisitée</p>
                         <div class="food__price">
                             <p>20€</p>
+                        </div>
+                        <div class="food__effect">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
                 </div>
@@ -96,6 +105,9 @@
                         <div class="food__price">
                             <p>40€</p>
                         </div>
+                        <div class="food__effect">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -108,6 +120,9 @@
                         <div class="food__price">
                             <p>35€</p>
                         </div>
+                        <div class="food__effect">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -119,6 +134,9 @@
                         <p>Sur son lit de gnocchis aux légumes</p>
                         <div class="food__price">
                             <p>44€</p>
+                        </div>
+                        <div class="food__effect">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
                 </div>
@@ -139,6 +157,9 @@
                         <div class="food__price">
                             <p>18€</p>
                         </div>
+                        <div class="food__effect">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -151,6 +172,9 @@
                         <div class="food__price">
                             <p>22€</p>
                         </div>
+                        <div class="food__effect">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -162,6 +186,9 @@
                         <p>Myrtilles et pâte d'amande</p>
                         <div class="food__price">
                             <p>23€</p>
+                        </div>
+                        <div class="food__effect">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
                 </div>
