Modifications pour animations

--- a/Lanoteenchantee.html
+++ b/Lanoteenchantee.html
@@ -13,7 +13,7 @@
 
     <title>La note enchantée</title>
   </head>
-
+  
   <body>
 
     <!--HEADER-->
@@ -38,7 +38,7 @@
                 </div>
 
         <!--MENU-->
-
+        
         <!--ENTREES-->
         <section class="food">
             <div class="food__title">
@@ -53,6 +53,9 @@
                         <div class="food__price">
                             <p>25€</p>
                         </div>
+                        <div class="food__effect">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -64,6 +67,9 @@
                         <p>Sur blini à la farine de blé noir</p>
                         <div class="food__price">
                             <p>35€</p>
+                        </div>
+                        <div class="food__effect">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
                 </div>
@@ -77,6 +83,9 @@
                         <div class="food__price">
                             <p>20€</p>
                         </div>
+                        <div class="food__effect">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -89,10 +98,12 @@
                         <div class="food__price">
                             <p>35€</p>
                         </div>
+                        <div class="food__effect">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
-
         </section>
 
         <!--PLATS-->
@@ -109,6 +120,9 @@
                         <div class="food__price">
                             <p>40€</p>
                         </div>
+                        <div class="food__effect">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -121,6 +135,9 @@
                         <div class="food__price">
                             <p>35€</p>
                         </div>
+                        <div class="food__effect">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -132,6 +149,9 @@
                         <p>Et riz sauvage aux zests de citron</p>
                         <div class="food__price">
                             <p>44€</p>
+                        </div>
+                        <div class="food__effect">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
                 </div>
@@ -152,6 +172,9 @@
                         <div class="food__price">
                             <p>18€</p>
                         </div>
+                        <div class="food__effect">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -163,6 +186,9 @@
                         <p>Avec son coulis de citron</p>
                         <div class="food__price">
                             <p>22€</p>
+                        </div>
+                        <div class="food__effect">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
                 </div>
@@ -176,9 +202,13 @@
                         <div class="food__price">
                             <p>23€</p>
                         </div>
+                        <div class="food__effect">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
+        
         </section>
 
         <!--BUTTON-->
