Modifications pour animations

--- a/Lapalettedugout.html
+++ b/Lapalettedugout.html
@@ -55,6 +55,9 @@
                         <div class="food__price">
                             <p>25€</p>
                         </div>
+                        <div class="food__effect">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -67,6 +70,9 @@
                         <div class="food__price">
                             <p>35€</p>
                         </div>
+                        <div class="food__effect">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -78,6 +84,9 @@
                         <p>Assaisoné à la truffe sur lit de caviar</p>
                         <div class="food__price">
                             <p>20€</p>
+                        </div>
+                        <div class="food__effect">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
                 </div>
@@ -98,6 +107,9 @@
                         <div class="food__price">
                             <p>40€</p>
                         </div>
+                        <div class="food__effect">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -110,6 +122,9 @@
                         <div class="food__price">
                             <p>35€</p>
                         </div>
+                        <div class="food__effect">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -121,6 +136,9 @@
                         <p>Aux agrumes</p>
                         <div class="food__price">
                             <p>44€</p>
+                        </div>
+                        <div class="food__effect">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
                 </div>
@@ -141,6 +159,9 @@
                         <div class="food__price">
                             <p>18€</p>
                         </div>
+                        <div class="food__effect">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -153,6 +174,9 @@
                         <div class="food__price">
                             <p>22€</p>
                         </div>
+                        <div class="food__effect">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -164,6 +188,9 @@
                         <p>Au piment d'espelette et à la truffe noire</p>
                         <div class="food__price">
                             <p>23€</p>
+                        </div>
+                        <div class="food__effect">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
                 </div>
