Modifications pour animations

--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
 
     <title>Acceuil</title>
   </head>
-
   <body>
+    <!--SPINNER-->
+    <div class="spinner">
+      <svg>
+        <circle cx="70" cy="70" r="70"></circle>
+      </svg>
+      </div>
+      <div class="all">
       <!--HEADER-->
       <header>
       <a href="">
@@ -24,14 +30,14 @@
       </a>
    
         <div class="location">
-            <p>Paris, Belleville</p>
+            <p><i class="fas fa-map-marker-alt"></i> Paris, Belleville</p>
         </div>
 
         <div class="info-header">
         <div class="info-title">
             <h1>Réservez le menu qui<br>vous convient</h1>
         <div class="info-details">
-            <p>Découvrez des restaurants d'éxception,<br>séléctionnés par nos soins.</p>
+            <p>Découvrez des restaurants d'exception,<br>séléctionnés par nos soins.</p>
         </div>
         </div>
 
@@ -47,13 +53,13 @@
 
           <div class="working">
               <div class="working-cards">
-                <h3 class="number">1</h3> <p>Choisissez un restaurant</p>
+                <h3 class="number">1</h3> <p><i class="fas fa-mobile-alt"></i> Choisissez un restaurant</p>
               </div>
               <div class="working-cards">
-                <h3 class="number">2</h3><p>Composez votre menu</p>
+                <h3 class="number">2</h3><p><i class="fas fa-list-ul"></i> Composez votre menu</p>
             </div>
             <div class="working-cards">
-                <h3 class="number">3</h3><p>Dégustez au restaurant</p>
+                <h3 class="number">3</h3><p><i class="fas fa-store"></i> Dégustez au restaurant</p>
             </div>
           </div>
       </nav>
@@ -66,50 +72,84 @@
 
           <div class="places">
 
-            <a href="">
+            <a href="Lapalettedugout.html">
               <div class="places-cards">
                   <img class="places-img" src="palgout.jpg" alt="Photo de La palette du goût"
                   width="300" height="150">
                   <div class="places-details">
                       <h4>La palette du goût</h4>
                       <p>Ménilmontant</p>
+                      <div class="icons">
+                        <i class="far fa-heart"></i>
+                      </div>
+                      <div class="places__effect">
+                        <div class="effect__p">
+                        <p>Nouveau</p>
+                      </div>
+                      </div>
                   </div>
               </div>
         </a>
 
-            <a href="">
+            <a href="Lanoteenchantee.html">
               <div class="places-cards">
                 <img class="places-img" src="lanote.jpg" alt="Photo de La note enchantée"
                 width="300" height="150">
                 <div class="places-details">
                     <h4>La note enchantée</h4>
                     <p>Charonne</p>
+                    <div class="icons">
+                        <i class="far fa-heart"></i>
+                      </div>
+                      <div class="places__effect">
+                        <div class="effect__p">
+                        <p>Nouveau</p>
+                      </div>
+                      </div>
                 </div>
             </div>
         </a>
+        </div>
 
-            <a href="">
+        <div class="places-2">
+            <a href="Alafrancaise.html">
             <div class="places-cards">
                 <img class="places-img" src="francaise.jpg" alt="Photo de À la francaise"
                 width="300" height="150">
                 <div class="places-details">
                     <h4>À la francaise</h4>
                     <p>Cité Rouge</p>
+                    <div class="icons">
+                        <i class="far fa-heart"></i>
+                      </div>
+                      <div class="places__effect">
+                        <div class="effect__p">
+                        <p>Nouveau</p>
+                      </div>
+                      </div>
                 </div>
             </div>
         </a>
 
-            <a href="">
+            <a href="Ledelicedessens.html">
             <div class="places-cards">
                 <img class="places-img" src="délice.jpg" alt="Délice des sens"
                 width="300" height="150">
                 <div class="places-details">
                     <h4>Le délice des sens</h4>
                     <p>Folie-Méricourt</p>
+                    <div class="icons">
+                        <i class="far fa-heart"></i>
+                      </div>
+                      <div class="places__effect">
+                        <div class="effect__p">
+                        <p>Nouveau</p>
+                      </div>
+                      </div>
                 </div>
             </div>
         </a>
-
+        </div>
           </div>
       </section>
 
@@ -122,11 +162,11 @@
 
             <div class="footer-details">
                 <div class="footer-link">
-                    <a href="">Proposer un restaurant</a>
+                    <a href=""><i class="fas fa-utensils"></i> Proposer un restaurant</a>
                 </div>
 
                 <div class="footer-link">
-                    <a href="">Devenir partenaire</a>
+                    <a href=""><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
                 </div>
 
                 <div class="footer-link">
@@ -139,4 +179,5 @@
 
             </div>
       </footer>
+    </div>
   </body>
