--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
             <a href="Lapalettedugout.html">
               <div class="places-cards">
-                  <img class="places-img" src=".Ohmyfoodproject/src/restaurants/palgout.jpg" alt="Photo de La palette du goût"
+                  <img class="places-img" src=".src/restaurants/palgout.jpg" alt="Photo de La palette du goût"
                   width="300" height="150">
                   <div class="places-details">
                       <h4>La palette du goût</h4>
@@ -93,7 +93,7 @@
 
             <a href="Lanoteenchantee.html">
               <div class="places-cards">
-                <img class="places-img" src=".Ohmyfoodproject/src/restaurants/lanote.jpg" alt="Photo de La note enchantée"
+                <img class="places-img" src=".src/restaurants/lanote.jpg" alt="Photo de La note enchantée"
                 width="300" height="150">
                 <div class="places-details">
                     <h4>La note enchantée</h4>
@@ -114,7 +114,7 @@
         <div class="places-2">
             <a href="Alafrancaise.html">
             <div class="places-cards">
-                <img class="places-img" src=".Ohmyfoodproject/src/restaurants/francaise.jpg" alt="Photo de À la francaise"
+                <img class="places-img" src=".src/restaurants/francaise.jpg" alt="Photo de À la francaise"
                 width="300" height="150">
                 <div class="places-details">
                     <h4>À la francaise</h4>
@@ -133,7 +133,7 @@
 
             <a href="Ledelicedessens.html">
             <div class="places-cards">
-                <img class="places-img" src=".Ohmyfoodproject/src/restaurants/délice.jpg" alt="Délice des sens"
+                <img class="places-img" src=".src/restaurants/délice.jpg" alt="Délice des sens"
                 width="300" height="150">
                 <div class="places-details">
                     <h4>Le délice des sens</h4>
