--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <header>
       <a href="">
       <div class="logo">
-          <img class="svg-logo" src="ohmyfoodsvg.svg" alt="Logo de Ohmyfood">
+          <img class="svg-logo" src="src/ohmyfoodsvg.svg" alt="Logo de Ohmyfood">
       </div>
       </a>
    
