--- a/Alafrancaise.html
+++ b/Alafrancaise.html
@@ -25,13 +25,13 @@
         </div>
         </a>
         <div class="logo">
-            <img class="svg-logo" src="ohmyfoodsvg.svg" alt="Logo de Ohmyfood">
+            <img class="svg-logo" src="src/ohmyfoodsvg.svg" alt="Logo de Ohmyfood">
         </div>
         
         </header>
 
         <div class="background">
-            <img class="background__img" src="francaise.jpg" alt="Image du restaurant À la française"
+            <img class="background__img" src="src/francaise.jpg" alt="Image du restaurant À la française"
             width="365" height="250">
         </div>
 
