--- a/Lapalettedugout.html
+++ b/Lapalettedugout.html
@@ -11,7 +11,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="unique.css">
-    <link rel="stylesheet" type="htlm" href="Acceuil.html">
+    <link rel="stylesheet" type="text/html" href="Acceuil.html">
     <script src="https://kit.fontawesome.com/e5dbd3d7b3.js" crossorigin="anonymous"></script>
 
     <title>La palette du goût</title>
