--- a/Ledelicedessens.html
+++ b/Ledelicedessens.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="unique.css">
-    <link rel="stylesheet" type="htlm" href="Acceuil.html">
+    <link rel="stylesheet" type="text/html" href="Acceuil.html">
     <script src="https://kit.fontawesome.com/e5dbd3d7b3.js" crossorigin="anonymous"></script>
 
     <title>Le délice des sens</title>
